updated file with clean connection to db in separated files and ERD done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 project(X_RR C)
 
 set(CMAKE_C_STANDARD 23)
-#set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,8388608")
 
 # === PostgreSQL Setup ===
 set(POSTGRESQL_ROOT "C:/Program Files/PostgreSQL/17")
-
 include_directories("${POSTGRESQL_ROOT}/include")
 link_directories("${POSTGRESQL_ROOT}/lib")
 
@@ -19,7 +17,11 @@ link_directories(${GTK3_LIBRARY_DIRS})
 add_definitions(${GTK3_CFLAGS_OTHER})
 
 # === Executable and Linking ===
-add_executable(X_RR main.c env_loader.c)
+add_executable(X_RR
+        main.c
+        env_loader.c
+        db_connection.c
+)
 
 target_link_libraries(X_RR
         ${GTK3_LIBRARIES}
@@ -32,6 +34,9 @@ if (WIN32)
             "${POSTGRESQL_ROOT}/bin/libpq.dll"
             "${POSTGRESQL_ROOT}/bin/libssl-3-x64.dll"
             "${POSTGRESQL_ROOT}/bin/libcrypto-3-x64.dll"
+            "${POSTGRESQL_ROOT}/bin/libiconv-2.dll"
+            "${POSTGRESQL_ROOT}/bin/libintl-9.dll"
+            "${POSTGRESQL_ROOT}/bin/zlib1.dll"
     )
 
     foreach(DLL ${DLL_FILES})
