feat: add new GUI for main chat window and GTK reimplementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,48 +3,57 @@ project(X_RR C)
 
 set(CMAKE_C_STANDARD 23)
 
-# === PostgreSQL Setup for Server ===
+# --- Setup for GTK3 ---
+find_package(PkgConfig REQUIRED)
+
+# Check if GTK3 is available
+pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+
+# Include GTK3 directories
+include_directories(${GTK3_INCLUDE_DIRS})
+
+# --- PostgreSQL Setup ---
 if (WIN32)
     set(POSTGRESQL_ROOT "C:/Program Files/PostgreSQL/17")
     include_directories("${POSTGRESQL_ROOT}/include")
     link_directories("${POSTGRESQL_ROOT}/lib")
 endif()
 
-# === Common Source Files ===
+# --- Common Source Files ---
 set(COMMON_SOURCES
         env_loader.c
         platform.h
 )
 
-# === Server Target ===
+# --- Server Target ---
 add_executable(server
         main_server.c
         db_connection.c
         ${COMMON_SOURCES}
+        chat_window.c
+        chat_window.h
 )
 
-# === Client Target ===
+# --- Client Target ---
 add_executable(client
         main_client.c
         ${COMMON_SOURCES}
 )
 
-# === Link Libraries ===
+# --- Link Libraries ---
 if (WIN32)
-    # Server needs PostgreSQL and Winsock
     target_link_libraries(server libpq ws2_32)
-
-    # Client only needs Winsock
     target_link_libraries(client ws2_32)
 else()
-    # On Linux, use 'pq' for PostgreSQL
     target_link_libraries(server pq)
-
-    # No extra libs needed for client
     target_link_libraries(client)
 endif()
 
-# === Copy PostgreSQL DLLs (Windows only) ===
+# Link GTK3 libraries after the targets are created
+target_link_libraries(client ${GTK3_LIBRARIES})
+target_link_libraries(server ${GTK3_LIBRARIES})
+
+# --- Copy PostgreSQL DLLs (Windows only) ---
 if (WIN32)
     set(DLL_FILES
             "${POSTGRESQL_ROOT}/bin/libpq.dll"
@@ -57,7 +66,6 @@ if (WIN32)
 
     foreach(DLL ${DLL_FILES})
         message(STATUS "Looking for DLL: ${DLL}")
-        # Copy DLLs for server
         add_custom_command(TARGET server POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy_if_different
                 "${DLL}" $<TARGET_FILE_DIR:server>
