feat: add encryption system for login and register

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(COMMON_SOURCES
         protocol.h
         db_connection.c
         db_connection.h
+        encryption.c
 )
 
 # === Server Target ===
