--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,93 +1,113 @@
 cmake_minimum_required(VERSION 3.10)
-project(X_RR C)
+project(X-RR C)
 
 set(CMAKE_C_STANDARD 23)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 
-# === PostgreSQL Setup for Server ===
-if (WIN32)
+# --- Setup for GTK3 ---
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+include_directories(${GTK3_INCLUDE_DIRS})
+
+# --- PostgreSQL Setup ---
+if(WIN32)
     set(POSTGRESQL_ROOT "C:/Program Files/PostgreSQL/17")
     include_directories("${POSTGRESQL_ROOT}/include")
     link_directories("${POSTGRESQL_ROOT}/lib")
+    set(ENV{PKG_CONFIG_PATH} "C:/msys64/mingw64/lib/pkgconfig")
+    set(CMAKE_PREFIX_PATH "C:/msys64/mingw64")
 endif()
 
-# === Common Source Files ===
+# Common source files for both client and server
 set(COMMON_SOURCES
-        env_loader.c
-        platform.h
-        protocol.c
-        protocol.h
-        db_connection.c
-        db_connection.h
-        encryption.c
+    src/network/protocol.c
+    src/database/db_connection.c
+    src/config/env_loader.c
+    src/security/encryption.c
+    src/utils/string_utils.c
 )
 
-# === Server Target ===
-add_executable(server
-        main_server.c
-        ${COMMON_SOURCES}
+# Common header files
+set(COMMON_HEADERS
+    src/network/protocol.h
+    src/network/platform.h
+    src/database/db_connection.h
+    src/config/env_loader.h
+    src/security/encryption.h
+    src/utils/string_utils.h
 )
 
-# === Client Target ===
-#add_executable(client
-#        main_client.c
-#        ${COMMON_SOURCES}
-#)
-
-# === GTK App Target ===
-add_executable(gtk_app
-        gtk_app.c
-        ${COMMON_SOURCES}
+# Server sources
+set(SERVER_SOURCES
+    src/main_server.c
 )
 
-# === Link Libraries ===
-if (WIN32)
-    # Server needs PostgreSQL and Winsock
-    target_link_libraries(server libpq ws2_32)
+# GTK App sources
+set(GTK_APP_SOURCES
+    src/main.c
+    src/components/login_page.c
+    src/components/register_page.c
+    src/components/chat_page.c
+    src/types/app_types.h
+    src/components/login_page.h
+    src/components/register_page.h
+    src/components/chat_page.h
+)
 
-    # Client only needs Winsock
-#    target_link_libraries(client ws2_32)
+set(GTK_ONLY_SOURCES
+        src/utils/gtk_string_utils.c
+        src/utils/gtk_string_utils.h
+)
 
-    # GTK App needs GTK, Winsock, pthread, and PostgreSQL
-    find_package(PkgConfig REQUIRED)
-    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
-    include_directories(${GTK3_INCLUDE_DIRS})
-    target_link_libraries(gtk_app ${GTK3_LIBRARIES} ws2_32 pthread libpq)
+# Create executables
+add_executable(server ${SERVER_SOURCES} ${COMMON_SOURCES} ${COMMON_HEADERS})
+add_executable(gtk_app ${GTK_APP_SOURCES} ${COMMON_SOURCES} ${GTK_ONLY_SOURCES}  ${COMMON_HEADERS})
+
+# Include directories for all executables
+target_include_directories(server PRIVATE
+    ${CMAKE_SOURCE_DIR}
+    ${CMAKE_SOURCE_DIR}/src
+    ${POSTGRESQL_INCLUDE_DIRS}
+    C:/msys64/mingw64/include
+)
+
+target_include_directories(gtk_app PRIVATE
+    ${CMAKE_SOURCE_DIR}
+    ${GTK3_INCLUDE_DIRS}
+    ${POSTGRESQL_INCLUDE_DIRS}
+    C:/msys64/mingw64/include
+)
+
+# Link libraries
+if(WIN32)
+    target_link_libraries(server PRIVATE libpq ws2_32)
+    target_link_libraries(gtk_app PRIVATE ${GTK3_LIBRARIES} ws2_32 pthread libpq)
 else()
-    # On Linux, use 'pq' for PostgreSQL
-    target_link_libraries(server pq)
-
-    # No extra libs needed for client
-    target_link_libraries(client)
-
-    # GTK App needs GTK, pthread, and PostgreSQL
-    find_package(PkgConfig REQUIRED)
-    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
-    include_directories(${GTK3_INCLUDE_DIRS})
-    target_link_libraries(gtk_app ${GTK3_LIBRARIES} pthread pq)
+    target_link_libraries(server PRIVATE pq)
+    target_link_libraries(gtk_app PRIVATE ${GTK3_LIBRARIES} pthread pq)
 endif()
 
-# === Copy PostgreSQL DLLs (Windows only) ===
-if (WIN32)
+# Copy DLLs on Windows
+if(WIN32)
     set(DLL_FILES
-            "${POSTGRESQL_ROOT}/bin/libpq.dll"
-            "${POSTGRESQL_ROOT}/bin/libssl-3-x64.dll"
-            "${POSTGRESQL_ROOT}/bin/libcrypto-3-x64.dll"
-            "${POSTGRESQL_ROOT}/bin/libiconv-2.dll"
-            "${POSTGRESQL_ROOT}/bin/libintl-9.dll"
-            "${POSTGRESQL_ROOT}/bin/zlib1.dll"
+        "${POSTGRESQL_ROOT}/bin/libpq.dll"
+        "${POSTGRESQL_ROOT}/bin/libssl-3-x64.dll"
+        "${POSTGRESQL_ROOT}/bin/libcrypto-3-x64.dll"
+        "${POSTGRESQL_ROOT}/bin/libiconv-2.dll"
+        "${POSTGRESQL_ROOT}/bin/libintl-9.dll"
+        "${POSTGRESQL_ROOT}/bin/zlib1.dll"
     )
 
     foreach(DLL ${DLL_FILES})
-        message(STATUS "Looking for DLL: ${DLL}")
-        # Copy DLLs for server
         add_custom_command(TARGET server POST_BUILD
-                COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                "${DLL}" $<TARGET_FILE_DIR:server>
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${DLL}" $<TARGET_FILE_DIR:server>
         )
-        # Copy DLLs for GTK app
         add_custom_command(TARGET gtk_app POST_BUILD
-                COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                "${DLL}" $<TARGET_FILE_DIR:gtk_app>
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${DLL}" $<TARGET_FILE_DIR:gtk_app>
         )
     endforeach()
+
+
 endif()
