--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,11 @@ Mkfile.old
 dkms.conf
 cmake-build-debug/
 cmake-build-debug/.env
+cmake-build-release/
+cmake-build-release
+cmake-build-release/.env
+
+
 .idea
 build/
 .vscode/
